Collapsing Categories Changelog
* 0.8.4 (2009.01.10)
    * Got rid of empty quotes in query when no in/exclude is used

* 0.8.3 (2009.01.08)
    * Refixed settings page for manual usage
    * Changed category query in the hopes that it works for more people

* 0.8.2: (2009.01.07)
    * Added version to javascript
    * not loading unnecessary code for admin pages (fixes interference with
      akismet stats page
    * fixed settings page for manual usage

* 0.8.1 (2009/01/06)
    * Finally fixed disappearing widget problem when trying to add to sidebar
    * Added debugging option to show the query used and the output
    * Moved style option to options page
 
* 0.8 (2008/12/08)
    * fixed javascript bug where thisli.parentNode was null
    * made javascript more flexible so that all collapsing X plugins can share
      more code
    * Now adds default options to database upon activation for use manually
    * styling now done through an option
    * inline javascript moved to footer for faster page loading
    * fixed exclusion/inclusion of multi-word categories

* 0.7.1 (2008/12/01)
    * fixed javascript bug in IE7

* 0.7 (2008/11/22)
    * Cookie handling now affects categories that are expanded by default too
    * Can now be used either as a widget or manually
    * Got rid of the stupid float left from 0.6.6

* 0.6.6 (2008/11/21)
    * Added a float left to .sym css to make it compatible with more themes

* 0.6.5 (2008/11/18)
    * Now uses cookies to keep categories expanded if they have been clicked on

* 0.6.4 (2008/11/10)
    * Fixed a minor bug in with animation option not being properly set by
      default

* 0.6.3 (2008/10/03)
    * Added option to animate expanding and collapsing
    * Added option to add rss feeds for each category

* 0.6.2 (2008/09/11)
    * Fixed display of expand and collapse symbols when using images
    * Improved font handling and styling of text symbols

* 0.6.1 (2008/09/01)