@@ -1,6 +1,7 @@
 Collapsing Categories Changelog
 * 0.8.4 (2009.01.10)
     * Got rid of empty quotes in query when no in/exclude is used
+    * Added option to list categories, tags, or both
 
 * 0.8.3 (2009.01.08)
     * Refixed settings page for manual usage
